Fixed scrollbar showing on desktop, and removed top margin on the main content so that the header now overlaps the video (going to switch the main container to full width, i.e. container-fluid, next)

--- a/styles/main.css
+++ b/styles/main.css
@@ -113,7 +113,7 @@ body {
     height: 6em;
     padding: 1em 3em;
 
-    overflow-x: scroll;
+    overflow-x: auto;
     white-space: nowrap;
     overflow-y: hidden;
     text-align: right;
